# tap-hotjar

./: meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
tap_hotjar/: client.py  streams.py  tap.py
tap_hotjar/tests/: __init__.py  test_core.py
