[tool.poetry]
name = "tap-hotjar"
version = "0.0.1"
description = "`tap-hotjar` is a Singer tap for HotJar, built with the Meltano Singer SDK."
authors = ["FirstName LastName"]
keywords = [
    "ELT",
    "HotJar",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
requests = "^2.25.1"
singer-sdk = "^0.11.1"
pandas = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_hotjar"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-hotjar = 'tap_hotjar.tap:TapHotJar.cli'
